# sim-kernel

./: README.md  meson.build
.github/workflows/: checkin.yml
src/: main.cpp  scheduler.cpp  scheduler.h  sim_types.h  simulator.cpp  simulator.h
